Final changes to site

--- a/index.html
+++ b/index.html
@@ -1,10 +1,216 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE HTML>
+<html lang="en">
 	<head>
+		<meta charset="utf-8">
 		<title>Interaction (Re)Design</title>
+		<meta name="description" content="A (re)design of the George Brown Interaction Design website page">
+		<meta name="author" content="Michael Byun">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="css/reset.css">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 		<link rel="stylesheet" href="css/index.css">
 	</head>
 	<body>
-		<h1>Hello world!</h1>
+
+		<!-- 
+      Deliverable:  Review Project: Interaction Design Website (Re)Design
+      Name:         Jeeho Byun
+      Student #:    101229610
+      Email:        jeeho.byun@georgebrown.ca
+      Submitted:    October 13, 2019
+      Notes:        Hi!
+
+
+      [x] I have reviewed the appropriate checklist before submitting this work
+		-->
+		
+		<header>
+			<!-- George Brown website top-bar -->
+			<section class="top-bar">
+				<div>
+					<a href="index.html"><img src="img/menu-icon.png" alt="Menu icon"></a>
+					<a href="index.html"><img src="img/gbc-logo.png" alt="George Brown logo"></a>
+				</div>
+				<div>
+					<a href="index.html"><img src="img/search-icon.png" alt="Search icon"></a>
+				</div>
+			</section>
+		</header>
+
+		<main>
+			<div class="intro">
+				<a href="index.html"><img src="img/students-interacting.png" alt="Picture of students interacting"></a>
+			</div>
+			
+			<div class="campus-environment">
+				<h1 class="campus-environment-title">Welcome to George Brown's Brand New Waterfront Artscape Daniels Campus</h1>
+				<p>Newly renovated in 2019, students will have the opportunity to study and learn in our brand new design building downtown. Located 3 Lower Jarvis St., students will be immersed in a new and invigorating atmosphere near the dock of Waterfront. The building is within a short walk's reach from various shops such as Starbucks for a quick java fix, or the the famous St. Lawrence Market for fresh foods, or the relaxing Sugar Beach for just hanging out, students are with plenty of options to complement their studies.</p>
+			</div>
+			
+			<div class="skills-and-experience">
+				<h1 class="skills-and-experience-title">Skills and Experience Gained</h1>
+				<p>The Interaction Design and Development program at George Brown College teaches valuable skills and provides various experiences to prepare designers to thrive in work environments. These skills include but are not limited to working with Adobe Photoshop and Illustrator, Autodesk Maya, HTML, CSS, and JavaScript, all of which will be infinitely invaluable in your journey as designers. Additionally, this program offers students the ability to collaborate constructively with one another to gain experience in sharing and building on ideas to create meaningful projects.</p>
+			</div>
+			
+			<div class="career-pathways">
+				<h1 class="career-pathways-title">Career Pathways</h1>
+				<p>This versatile program allows students to enter various design industries. You will be prepared to become but are not limited to web designers and developers, mobile designers and developers, graphic designers, 3D visualization artists, motion designers, information architects, and UI/UX designers and developers.</p>
+			</div>
+			
+			<h1 class="overview-title">Overview</h1>
+			<section class="overview">
+				<article>
+					<h2 class="program-name">Program Name</h2>
+					<p>Interaction Design and Development</p>
+				</article>
+				<article>
+					<h2 class="code">Code</h2>
+					<p>G113</p>
+				</article>
+				<article>
+					<h2 class="school">School</h2>
+					<p>School of Design</p>
+				</article>
+				<article>
+					<h2 class="location">Location</h2>
+					<p>Waterfront Campus</p>
+				</article>
+				<article>
+					<h2 class="duration">Duration</h2>
+					<p>3 years</p>
+				</article>
+				<article>
+					<h2 class="starting-month">Starting Month</h2>
+					<p>September, January</p>
+				</article>
+				<article>
+					<h2 class="credential">Credential</h2>
+					<p>Ontario College Advanced Diploma</p>
+				</article>
+				<article>
+					<h2 class="method-of-study">Method of Study</h2>
+					<p>Full-time, part-time</p>
+				</article>
+			</section>
+			
+			<h1 class="courses-title">Courses</h1>
+			<section class="courses">
+				<div>
+					<h2 class="semester-1">Semester 1</h2>
+					<ul>
+						<li>2D Visualization</li>
+						<li>Information Architecture I</li>
+						<li>Visual Design</li>
+						<li>Technical Drawing I</li>
+						<li>Interactive Systems</li>
+						<li>College English</li>
+					</ul>
+				</div>
+				<div>
+					<h2 class="semester-2">Semester 2</h2>
+					<ul>
+						<li>3D Visualization I</li>
+						<li>Information Architecture II</li>
+						<li>Information Design</li>
+						<li>Technical Drawing II</li>
+						<li>Usability Testing</li>
+						<li>Design Culture</li>
+					</ul>
+				</div>
+				<div>
+					<h2 class="semester-3">Semester 3</h2>
+					<ul>
+						<li>Cognitive Ergonomics</li>
+						<li>3D Visualization II</li>
+						<li>Interface Development I</li>
+						<li>Communicating Design</li>
+						<li>Brand and Marketing Strategies</li>
+						<li>General Education Elective</li>
+					</ul>
+				</div>
+				<div>
+					<h2 class="semester-4">Semester 4</h2>
+					<ul>
+						<li>3D Visualization III</li>
+						<li>Interface Development II</li>
+						<li>Physical Interfaces</li>
+						<li>Design Process and Management</li>
+						<li>Ergonomics in Design</li>
+						<li>General Education Elective</li>
+					</ul>
+				</div>
+				<div>
+					<h2 class="semester-5">Semester 5</h2>
+					<ul>
+						<li>Device Development I</li>
+						<li>Portfolio I</li>
+						<li>Interactive Systems Project I</li>
+						<li>Immersive Media I</li>
+						<li>Human Computer Interaction</li>
+						<li>General Education Elective</li>
+					</ul>
+				</div>
+				<div>
+					<h2 class="semester-6-or-fp">Semester 6 or Field Placement</h2>
+					<ul>
+						<li>Device Development II</li>
+						<li>Interactive Systems Project II</li>
+						<li>Immersive Media II</li>
+						<li>Data Visualization</li>
+						<li>Portfolio II</li>
+					</ul>
+				</div>
+			</section>
+			
+			<section class="graduate-quote">
+				<div>
+					<a href="index.html"><img src="img/aaron-rodgers.png" alt="Picture of Aaron Rodgers"></a>
+				</div>
+				<div>
+					<p>"I learned not only technical skills necessary to succeed, but soft skills as well in this program that is absolutely vital in launching your career. I feel very prepared to take on whatever it may be thanks to this program." -Aaron Rodgers</p>
+				</div>
+			</section>
+
+			<div class="apply-link">
+				<a href="index.html"><img src="img/apply-now.png" alt="Apply now link"></a>
+			</div>
+		</main>
+
+		<footer>
+			<div class="newsletter">
+				<h2 class="newsletter-hook">Get the latest news delivered straight to your inbox!</h2>
+				<input class="email-text" type="text" placeholder="Email address">
+				<button class="button" onclick="alert('You are all set! Keep a lookout in your inbox!')">Subscribe</button>
+			</div>
+			
+			<div class="policies">
+				<ul>
+					<li><a href="#">Terms of Use</a></li>
+					<li><a href="#">Privacy Policy</a></li>
+					<li><a href="#">Accessibility Policy</a></li>
+				</ul>
+			</div>
+
+			<div class="contact">
+				<h2 class="contact-title">Contact Us</h2>
+				<ul>
+					<li>+1 416 415 2000</li>
+					<li>TTY: 1-877-515-5559</li>
+					<li>ask.george@georgebrown.ca</li>
+				</ul>
+			</div>
+			
+			<div class="social-media">
+				<h2 class="social-media-title">Connect with GBC:</h2>
+				<a href="index.html"><img src="img/facebook-logo.png" alt="George Brown Facebook link"></a>
+				<a href="index.html"><img src="img/twitter-logo.png" alt="George Brown Twitter link"></a>
+				<a href="index.html"><img src="img/instagram-logo.png" alt="George Brown Instagram link"></a>
+				<a href="index.html"><img src="img/youtube-logo.jpg" alt="George Brown YouTube link"></a>
+				<a href="index.html"><img src="img/linkedin-logo.jpg" alt="George Brown LinkedIn link"></a>
+			</div>
+
+			<p class="copyright-tag">George Brown College &copy; 2019</p>
+		</footer>
+
 	</body>
 </html>
